--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "babylondigger"]
 	path = babylondigger
-	url = git@github.com:ispras-texterra/babylondigger.git
+	url = https://github.com/ispras-texterra/babylondigger
